[tool.poetry]
name = "bitcoin-data"
version = "0.1.0"
description = ""
authors = ["Wim van der Ham <wfjvdham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# deepchecks = "^0.18.1"
pandas-profiling = "^3.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
